# tael

./: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  SKILL.md  demo.cast  demo.sh  gen_demo.sh  llm.txt  mise.toml  publish.sh  run-gui.sh  run-server.sh
.github/: demo.cast  demo.sh  gen-banner.py  gen_demo.sh  record_demo_video.sh
.github/workflows/: cut-release.yml  docker.yml  release.yml
demo/tael-evals-agent/: README.md  cases.jsonl  pyproject.toml  run_demo.sh
demo/tael-evals-agent/agent/: simple_agent.py  wiki.py
demo/tael-evals-agent/evals/: score_case.py
docs/: chidori.md  launch-posts.md  releasing.md  tael-backend-design.md  tael-backend-impl-plan.md  tael-evals-design.md  tael-server-scaling-ha.md
tael-cli/: Cargo.toml
tael-cli/examples/: embed_cli.rs  embedded.rs
tael-cli/src/: client.rs  lib.rs  main.rs  output.rs  tui.rs
tael-cli/src/commands/: anomalies.rs  comment.rs  correlate.rs  diagnose.rs  eval.rs  experiment.rs  get.rs  issue.rs  mod.rs  query.rs  reliability.rs  server.rs  services.rs  signal.rs  skill.rs  summarize.rs  watch.rs
tael-gui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
tael-gui/src/: main.ts  styles.css
tael-gui/src-tauri/: Cargo.toml  tauri.conf.json
tael-gui/src-tauri/capabilities/: default.json
tael-gui/src-tauri/src/: lib.rs  main.rs
tael-server/: Cargo.toml
tael-server/benches/: README.md  blob_store.rs  serialization.rs  storage.rs
tael-server/benches/common/: mod.rs
tael-server/src/: config.rs  lib.rs  log_bus.rs  main.rs  promql.rs  span_bus.rs
tael-server/src/api/: rest.rs
tael-server/src/cluster/: election.rs  mod.rs
tael-server/src/ingest/: datadog.rs  mod.rs  otlp.rs  otlp_logs.rs  otlp_metrics.rs  prom_remote_write.rs
tael-server/src/storage/: blobs.rs  duckdb_store.rs  fanout.rs  mod.rs  models.rs  objstore.rs  remote.rs  search.rs
tael-server/src/storage/backend/: cold.rs  hot.rs  mod.rs  wal.rs
tael-server/src/storage/comments/: jsonl.rs  mod.rs  postgres.rs
tael-test/: Cargo.toml
tael-test/src/: main.rs  scenarios.rs  span_builder.rs
