[workspace]
resolver = "2"
members = ["tael-server", "tael-cli", "tael-test"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
duckdb = { version = "1", features = ["bundled"] }
opentelemetry-proto = { version = "0.29", features = ["gen-tonic", "trace"] }
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tower = "0.5"
hex = "0.4"
comfy-table = "7"
crossterm = "0.29"
rand = "0.8"
ratatui = "0.29"
