[package]
name = "tael-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AI-agent-native observability — a single `tael` binary that runs the OTLP ingest/storage server (`tael serve`) and queries, visualizes, and annotates traces"

# `cargo binstall tael-cli` downloads a prebuilt binary from the GitHub Release
# for the matching `v{version}` tag instead of compiling from source. Archive
# layout and tag naming are produced by .github/workflows/release.yml.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/tael-cli-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "tael-cli-v{ version }-{ target }/{ bin }{ binary-ext }"

[[bin]]
name = "tael"
path = "src/main.rs"

[features]
# `gui` (default-on) pulls in the Tauri desktop app behind the `tael gui`
# command. It hard-links webkit/GTK, which is dead weight in a headless
# container, so the Docker image and server-only installs build with
# `--no-default-features` to drop it. `cargo install` / `cargo binstall`
# keep the GUI by default.
default = ["gui"]
gui = ["dep:tael-gui"]

[dependencies]
tael-server = { path = "../tael-server", version = "0.5.8" }
tael-gui = { path = "../tael-gui/src-tauri", version = "0.5.8", package = "tael-gui", optional = true }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
