[package]
name = "tael-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AI-agent-native observability server library — OTLP ingestion, tiered storage, and the REST/gRPC query API (embedded by the `tael` CLI via `tael serve`)"

[lib]
name = "tael_server"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
duckdb = { workspace = true, optional = true }
hex.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
walrus-rust.workspace = true
snap.workspace = true
bytes.workspace = true
sha2.workspace = true
fjall.workspace = true
arrow.workspace = true
parquet.workspace = true
ulid.workspace = true
tantivy.workspace = true
form_urlencoded.workspace = true
chitchat.workspace = true
object_store = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
duckdb = ["dep:duckdb"]
# Cloud deployment surface: native GCS object storage (cold tier + blobs) and
# Postgres-backed comments. Off by default so the single-binary local build has
# zero extra dependencies and byte-identical behavior. Selected at runtime via
# TAEL_COLD_STORE/TAEL_BLOB_STORE=gcs and TAEL_COMMENTS_STORE=postgres.
cloud = ["dep:object_store", "dep:sqlx"]
# Builds the `storage` bench target (DuckDbStore through the Store trait). Kept
# behind a feature so the default `cargo bench` stays focused on CPU/blob-store
# hot paths. Run with: cargo bench --features bench-storage
bench-storage = ["duckdb"]

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "blob_store"
harness = false

[[bench]]
name = "storage"
harness = false
required-features = ["bench-storage"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
