[package]
name = "tael-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop GUI for tael, embedded by the `tael gui` command"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tael_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tokio.workspace = true
