[package]
name = "tael-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop GUI for tael, embedded by the `tael gui` command"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tael_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Embed the built frontend (dist/) and serve it over the tauri:// protocol.
# Required for `cargo install`/release builds: they don't run through
# `tauri-cli`, so without this Tauri treats the build as "dev", points the
# webview at `devUrl`, and shows a blank window. On by default; disable to
# develop against the vite dev server.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tokio.workspace = true
